[package]
name = "smasher"
version = "0.1.0"
authors = ["Tormod G. Hellen <tormod@mbr-targeting.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
log = "0.4.8"
simple_logger = "1.6.0"
simple-error = "0.2.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"