[package]
name = "smasher"
version = "0.1.0"
authors = ["Tormod G. Hellen <tormod@mbr-targeting.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
log = "0.4.8"
simple_logger = "1.6.0"
simple-error = "0.2.1"
rustc-serialize = "0.3.24"
hmac = "0.7.1"
sha2 = "0.8.1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"